--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "spinners-react": "^1.0.7",
     "util": "^0.12.5",
     "uuid": "^8.3.2",
     "uuidv4": "^6.2.13",
